--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,139 @@
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  background: linear-gradient(135deg, #f06, #4a90e2); /* Градиент */
+  color: #333;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.App {
+  text-align: center;
+  padding: 40px;
+  max-width: 600px;
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+ 
+
+h1, h2 {
+  background: linear-gradient(135deg, #6c3483, #8e44ad);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+ 
+
+/* Стили для формы */
+form {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: 600;
+  color: #34495e;
+  text-align: left;
+}
+
+input, button, .react-datepicker-wrapper, .react-time-picker {
+  padding: 10px;
+  margin: 8px 0;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+
+input:focus, .react-datepicker-wrapper input:focus, .react-time-picker input:focus {
+  outline: none;
+  border-color: #2980b9;
+  box-shadow: 0 0 8px rgba(41, 128, 185, 0.5);
+}
+
+button {
+  background-color: #2980b9;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+button:hover {
+  background-color: #1f6391;
+  transform: scale(1.05);
+}
+
+/* Ошибка */
+.error {
+  color: red;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+/* Стили для списка записей */
+ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: left;
+}
+
+li {
+  background-color: #ecf0f1;
+  margin: 10px 0;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+li:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
+
+li strong {
+  color: #2c3e50;
+  font-size: 18px;
+}
+
+li div {
+  margin-top: 5px;
+  font-size: 14px;
+}
+
+li div span {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+@media (max-width: 600px) {
+  .App {
+    padding: 20px;
+  }
+
+  input, button {
+    font-size: 14px;
+  }
+
+  li {
+    padding: 10px;
+  }
+}
+
+
+
+button i {
+  margin-right: 8px;
+}
+
